unpackaged/main/default/objects/Account/fields/Account_Credit__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit__c</fullName>
    <label>Account Credit</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>