unpackaged/main/default/objects/Account/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <label>Account Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALACRITY</fullName>
            </value>
            <value>
                <fullName>PACK AND LOAD</fullName>
            </value>
            <value>
                <fullName>BIG RENTZ</fullName>
            </value>
            <value>
                <fullName>HOME DEPOT</fullName>
            </value>
            <value>
                <fullName>LOWES</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>Neighborly</fullName>
            </value>
            <value>
                <fullName>Sedgwick</fullName>
                <label>SEDGWICK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>