unpackaged/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>FRANCHISEE</fullName>
            </value>
            <value>
                <fullName>SALESPERSON</fullName>
            </value>
            <value>
                <fullName>CORPORATE LOCATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>