unpackaged/main/default/objects/Account/fields/Amazing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Amazing_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This customer is amazing and requires the absolute best customer service :)</description>
    <label>Amazing Customer</label>
    <type>Checkbox</type>
</CustomField>