unpackaged/main/default/objects/Account/fields/Contractor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ONLY TO BE CHECKED BY CUSTOMER SERVICE LEAD
Check this field to allow Contractor Pricing for this Account</inlineHelpText>
    <label>Commercial Business (Service Agreement)</label>
    <type>Checkbox</type>
</CustomField>