unpackaged/main/default/objects/Account/fields/Customer_Designation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Designation__c</fullName>
    <label>Customer Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>