unpackaged/main/default/objects/Account/fields/Date_Account_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Signed__c</fullName>
    <label>Date Account Signed</label>
    <type>Date</type>
</CustomField>