unpackaged/main/default/objects/Account/fields/Days_SInce_Last_Order__c.field-meta.xml
<CustomField>
    <fullName>Days_SInce_Last_Order__c</fullName>
    <formula>TODAY() -Most_Recent_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days SInce Last Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>