unpackaged/main/default/objects/Account/fields/Email_1__c.field-meta.xml
<CustomField>
    <fullName>Email_1__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>