unpackaged/main/default/objects/Account/fields/Email_Format__c.field-meta.xml
<CustomField>
    <fullName>Email_Format__c</fullName>
    <label>Email Format</label>
    <type>Email</type>
</CustomField>