unpackaged/main/default/objects/Account/fields/First_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Date__c</fullName>
    <description>Date of this Account&#39;s first Order</description>
    <inlineHelpText>Date of this Account&#39;s first Order</inlineHelpText>
    <label>First Order Date</label>
    <type>Date</type>
</CustomField>