unpackaged/main/default/objects/Account/fields/Fuel_Environmental_Offset_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Environmental_Offset_Fee__c</fullName>
    <label>Fuel Environmental Offset Fee (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>