unpackaged/main/default/objects/Account/fields/Fuel_Environmental_Offset_Fee_Value__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Environmental_Offset_Fee_Value__c</fullName>
    <label>Fuel Environmental Offset Fee ($ Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>