unpackaged/main/default/objects/Account/fields/Is_Area_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Is_Area_Serviced__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set to false from E-Commerce when user logs in and Shipping Postal Code is not in Pricebooks</description>
    <label>Is Area Serviced</label>
    <type>Checkbox</type>
</CustomField>