unpackaged/main/default/objects/Account/fields/Market_Number__c.field-meta.xml
<CustomField>
    <fullName>Market_Number__c</fullName>
    <description>Big Box Market Number</description>
    <label>Market Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>