unpackaged/main/default/objects/Account/fields/Most_Recent_Order__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Order__c</fullName>
    <description>The date of the most recent order.</description>
    <inlineHelpText>The date of the most recent order.</inlineHelpText>
    <label>Most Recent Order</label>
    <type>Date</type>
</CustomField>