unpackaged/main/default/objects/Account/fields/No_Quantity_Discount__c.field-meta.xml
<CustomField>
    <fullName>No_Quantity_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Quantity Discount</label>
    <type>Checkbox</type>
</CustomField>