unpackaged/main/default/objects/Account/fields/Pay_by_Terms__c.field-meta.xml
<CustomField>
    <fullName>Pay_by_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay by Terms</label>
    <type>Checkbox</type>
</CustomField>