unpackaged/main/default/objects/Account/fields/Potential_Customer__c.field-meta.xml
<CustomField>
    <fullName>Potential_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Customer?</label>
    <type>Checkbox</type>
</CustomField>