unpackaged/main/default/objects/Account/fields/Potential_Customer_Note__c.field-meta.xml
<CustomField>
    <fullName>Potential_Customer_Note__c</fullName>
    <label>Potential Customer Note</label>
    <length>200</length>
    <type>Text</type>
</CustomField>