unpackaged/main/default/objects/Account/fields/Potential_Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Potential_Customer_Request__c</fullName>
    <label>Potential Customer Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential_Customer_Request</valueSetName>
    </valueSet>
</CustomField>