unpackaged/main/default/objects/Account/fields/Price_Book_Active__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Active__c</fullName>
    <formula>Price_Book__r.IsActive</formula>
    <label>Price Book Active</label>
    <type>Checkbox</type>
</CustomField>