unpackaged/main/default/objects/Account/fields/Shipping_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Latitude__c</fullName>
    <formula>ShippingLatitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>