unpackaged/main/default/objects/Account/fields/Shipping_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Longitude__c</fullName>
    <formula>ShippingLongitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>