unpackaged/main/default/objects/Account/fields/Special__c.field-meta.xml
<CustomField>
    <fullName>Special__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special ?</label>
    <type>Checkbox</type>
</CustomField>