unpackaged/main/default/objects/Account/fields/Store_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Customer_Number__c</fullName>
    <label>Store/Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>