unpackaged/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Territory based on Billing Zip Code. Populated via flow.</description>
    <inlineHelpText>Territory assigned after record is saved, updated via Zip Code object.</inlineHelpText>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>