unpackaged/main/default/objects/Account/fields/Total_BullBags_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_BullBags_Received__c</fullName>
    <description>Total quantity of BullBags received by this account</description>
    <inlineHelpText>Total quantity of BullBags received by this account</inlineHelpText>
    <label>Total BullBags Received</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>