unpackaged/main/default/objects/Account/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>Total revenue generated by this account since inception.</description>
    <inlineHelpText>Total revenue generated by this account since inception.</inlineHelpText>
    <label>Total Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>