unpackaged/main/default/objects/Account/fields/Where_did_you_purchase_the_bag__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_purchase_the_bag__c</fullName>
    <label>Where did you purchase the bag?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>