unpackaged/main/default/objects/Account/recordTypes/Retail_Store.recordType-meta.xml
<RecordType>
    <fullName>Retail_Store</fullName>
    <active>true</active>
    <label>Retail Store</label>
</RecordType>