unpackaged/main/default/objects/Account/validationRules/Only_Admin_can_change_this_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admin_can_change_this_field</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISCHANGED(Pay_by_Terms__c ), 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorDisplayField>Pay_by_Terms__c</errorDisplayField>
    <errorMessage>Only Administrator or Management can change this field.</errorMessage>
</ValidationRule>