unpackaged/main/default/objects/Account/listViews/Accounts_with_Price_Books.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Price_Books</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Price_Book__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Price_Book__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Accounts with Price Books</label>
</ListView>