unpackaged/main/default/objects/Account/listViews/Accounts_wo_orders_last_90.listView-meta.xml
<ListView>
    <fullName>Accounts_wo_orders_last_90</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Most_Recent_Order__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Total_Revenue__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business</value>
    </filters>
    <filters>
        <field>Most_Recent_Order__c</field>
        <operation>lessThan</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Contractor,Restoration Company</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>TX</value>
    </filters>
    <label>Accounts wo orders last 90</label>
</ListView>