unpackaged/main/default/objects/Account/listViews/All_Accounts_as_Retail.listView-meta.xml
<ListView>
    <fullName>All_Accounts_as_Retail</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>Account_Type__c</columns>
    <columns>Customer_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Status__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Reseller</value>
    </filters>
    <label>All Retail Accounts</label>
</ListView>