unpackaged/main/default/objects/Account/listViews/All_Accounts_with_ZIP.listView-meta.xml
<ListView>
    <fullName>All_Accounts_with_ZIP</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>TX</value>
    </filters>
    <label>All Accounts with ZIP TX</label>
</ListView>