unpackaged/main/default/objects/Account/listViews/Coastal.listView-meta.xml
<ListView>
    <fullName>Coastal</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Email_1__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Most_Recent_Order__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Total_Revenue__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>coastal</value>
    </filters>
    <filters>
        <field>Total_Revenue__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>Coastal</label>
</ListView>