unpackaged/main/default/objects/Account/listViews/commercial_customers.listView-meta.xml
<ListView>
    <fullName>commercial_customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Most_Recent_Order__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Contractor_Rate__c</columns>
    <columns>Total_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contractor_Rate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>First_Order_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Most_Recent_Order__c</field>
        <operation>greaterThan</operation>
        <value>6/6/2023</value>
    </filters>
    <label>commercial customers</label>
    <sharedTo>
        <role>NDSM</role>
    </sharedTo>
</ListView>