unpackaged/main/default/objects/Account/listViews/contractor_check_box.listView-meta.xml
<ListView>
    <fullName>contractor_check_box</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Contractor_Rate__c</columns>
    <columns>Total_Revenue__c</columns>
    <columns>Most_Recent_Order__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business</value>
    </filters>
    <filters>
        <field>Most_Recent_Order__c</field>
        <operation>lessThan</operation>
        <value>LAST_N_MONTHS:4</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Contractor,Restoration Company,Multi Family Housing,Homebuilder,Property Manager</value>
    </filters>
    <filters>
        <field>Contractor_Rate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>contractor check box</label>
    <sharedTo>
        <role>Customer_Service</role>
        <role>NDSM</role>
    </sharedTo>
</ListView>