unpackaged/main/default/objects/Account/listViews/Dormant_Accounts.listView-meta.xml
<ListView>
    <fullName>Dormant_Accounts</fullName>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Most_Recent_Order__c</columns>
    <columns>Total_Revenue__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Email_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Most_Recent_Order__c</field>
        <operation>lessThan</operation>
        <value>12/31/2023</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Business</value>
    </filters>
    <filters>
        <field>PC_ADDRESS2_STREET</field>
        <operation>equals</operation>
    </filters>
    <label>Dormant Accounts</label>
</ListView>