unpackaged/main/default/objects/Account/listViews/Dump_Facilities.listView-meta.xml
<ListView>
    <fullName>Dump_Facilities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Waste Company,Landfill,Transfer Station</value>
    </filters>
    <label>Dump Facilities</label>
    <sharedTo>
        <role>Operations_Manager</role>
    </sharedTo>
</ListView>