unpackaged/main/default/objects/Account/listViews/Neighborly_accounts.listView-meta.xml
<ListView>
    <fullName>Neighborly_accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Account_Source__c</columns>
    <columns>Total_Revenue__c</columns>
    <columns>Most_Recent_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>rainbow international,mr rooter,grounds guys,mosquito joe,molly maid,aireserv,real property management</value>
    </filters>
    <label>Neighborly accounts</label>
</ListView>